# minesweeper-sweeper

./: CMakeLists.txt  README.md
modules/catch/: CMakeLists.txt
modules/cimg/: CMakeLists.txt
src/: CMakeLists.txt  Grid.cpp  Grid.h  GridBuilder.cpp  GridBuilder.h  GridMove.cpp  GridMove.h  GridTask.cpp  GridTask.h  Image.cpp  Image.h  ImageMatcher.cpp  ImageMatcher.h  InputData.h  PixelPerfectMatcher.cpp  PixelPerfectMatcher.h  ProcessPipeline.cpp  ProcessPipeline.h  Sweeper.cpp  Sweeper.h  Tile.cpp  Tile.h  TileData.cpp  TileData.h  TileGrid.cpp  TileGrid.h  TileTask.cpp  TileTask.h  WindowTask.cpp  WindowTask.h  calculator.cpp  grid.h
src/config/: resources.h.in
test/: CMakeLists.txt  GridBuilder_tests.cpp  Grid_tests.cpp  ImageMatcher_tests.cpp  Image_tests.cpp  Pipeline_tests.cpp  Sweeper_tests.cpp  TileGrid_tests.cpp  calculator_tests.cpp  grid_tests.cpp  main.cpp
test/config/: config.h.in  resources.cpp  resources.h.in
